fixed spacing in css

--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -816,6 +816,10 @@ img.me {
 	.name {
 		opacity: 0;
 	}
+
+  .content-box {
+    margin: 0 3em;
+  }
 }
 
 
